--- a/Sky.html
+++ b/Sky.html
@@ -34,7 +34,7 @@
   }
 
   p, h1, h2, h3, h4, h5, h6, div{
-  font: Quicksand;
+  font-family: Quicksand;
   color: #00fff2;
   text-align: center;
 }
