--- a/Week7Beta.html
+++ b/Week7Beta.html
@@ -3,8 +3,8 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>FNF Week 7</title>
-<meta property="og:title" content="FNF Week 7" />
+<title>FNF Week 7 (NOW HAS STORY MODE)</title>
+<meta property="og:title" content="FNF Week 7 (NOW HAS STORY MODE)" />
 <head>
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
@@ -12,7 +12,7 @@
 
 
 
-
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 
 .fullScreen {
@@ -30,7 +30,8 @@
       height: 540px;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
+
   
 .iframe-container {
 		text-align:center;
@@ -38,7 +39,7 @@
   }
 
   p, h1, h2, h3, h4, h5, h6, div{
-  font-family: Quicksand;
+  font-family: 'Quicksand';
   color: #00fff2;
   text-align: center;
 }
@@ -106,14 +107,16 @@ body {
 </div>
 
 <div class="iframe-container">
-<iframe src="https://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r87.zip/?NewgroundsAPI_PublisherID=1&amp;NewgroundsAPI_SandboxID=607cade7afa42&amp;NewgroundsAPI_SessionID=&amp;NewgroundsAPI_Username=%26It%3Bdeleted%26gt%3B&amp;NewgroundsAPI_UserID=0&amp;ng_username=%26It%3Bdeleted%36gt" height="540" width="1000" style="border:none;"></iframe>
+<iframe src="http://fnf.kdata1.com/fnf-v291/" height="540" width="1000" style="border:none;"></iframe>
 </div>
 
 <br>
 
-<h1>By the way...</h1>
-<h2>Week 7 story mode does <span style="color: red;">not</span> work but freeplay <span style="color: lime;">does!</span></h2>
+<h1><span style="color: lime;">Story mode now works!</span></h1>
 
+<center><form action="https://www.kickstarter.com/projects/funkin/friday-night-funkin-the-full-ass-game">
+  <input type="submit" value="go give them money loser"/>
+</form></center>
 
 <br>
 
