--- a/games.html
+++ b/games.html
@@ -92,12 +92,14 @@ body {
 </div>
 
 <h1 style="font-size: 50px;">Games</h1>
-<a href="Week7Beta.html"><h3>FNF Week 7</h3></a>
+<a href="Week7Beta.html"><h3>FNF Week 7 <span style="color: lime;">(Story mode now works!)</span></h3></a>
 <a href="Whitty.html"><h3>FNF Whitty</h3></a>
 <a href="FactoryBalls.html"><h3>FactoryBalls</h3></a>
-<a href="Sky.html"><h3>Sky <span style="color: rgb(251, 255, 0);">(NEW!)</span></h3></a>
+<a href="Sky.html"><h3>Sky</h3></a>
 
-<h5>if the games are running bad, try turning on <a href="https://www.howtogeek.com/412738/how-to-turn-hardware-acceleration-on-and-off-in-chrome/" target="_blank""><span style="color: #00fff2;"><u>hardware acceleration</u></span></a></h5>
+<h5>if the games are running bad, try turning on <a href="https://www.howtogeek.com/412738/how-to-turn-hardware-acceleration-on-and-off-in-chrome/" target="_blank"><span style="color: #00fff2;"><u>hardware acceleration</u></span></a></h5>
+
+<h6>if you dont want your game on here please <a href="mailto:contact@thediamondk.com"><span style="color: #00fff2;"><u>contact me (contact@thediamondk.com)</u></span></a>, this is a non-profit website made for my friends and if this gets too popular im taking it down</h6>
 
 <div class=iframe-container>
 <iframe scrolling="no" src="https://docs.google.com/forms/d/e/1FAIpQLSe-A7_Z-6JgvJac2dq5rspBFgMC6NnO1flmCeyfedvg0XN5cw/viewform?embedded=true" width="500" height="350" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
