--- a/FactoryBalls.html
+++ b/FactoryBalls.html
@@ -118,4 +118,6 @@ player.load({ url: url });
 swfobject.embedSWF('assets/flash/factoryballs.swf', 'ruffle', 500, 500);
 </script>
 
+<h6>if you dont want your game on here please <a href="mailto:contact@thediamondk.com"><span style="color: #00fff2;"><u>contact me (contact@thediamondk.com)</u></span></a>, this is a non-profit website made for my friends and if this gets too popular im taking it down</h6>
+
 </html>
