--- a/Week7Beta.html
+++ b/Week7Beta.html
@@ -106,50 +106,7 @@ body {
   
 </div>
 
-<div class="iframe-container">
-<iframe src="http://fnf.kdata1.com/fnf-v291/" height="540" width="1000" style="border:none;"></iframe>
-</div>
-
 <br>
 
-<h1><span style="color: lime;">Story mode now works!</span></h1>
-
-<center><form action="https://www.kickstarter.com/projects/funkin/friday-night-funkin-the-full-ass-game">
-  <input type="submit" value="go give them money loser"/>
-</form></center>
-
-<br>
-
-<center><button onclick="Fullscreen()">Fullscreen</button></center>
-
-<script>function Fullscreen() {
-  document.getElementsByTagName("iframe")[0].className = "fullScreen";
-  document.getElementsByTagName("body")[0].className = "blackground";
-  var x = document.getElementById("topnav"); 
-  if (x.style.display === "none") {
-    x.style.display = "none"
-  } else {
-    x.style.display = "none";
-  }
-}
-</script>
-
-<script>
-  document.addEventListener("keydown", event => {
-    switch (event.key) {
-        case "Escape":
-        document.getElementsByTagName("iframe")[0].className = "normal";
-        document.getElementsByTagName("body")[0].className = "body";
-        var x = document.getElementById("topnav"); 
-        if (x.style.display === "block") {
-    x.style.display = "block"
-  } else {
-    x.style.display = "block";
-  }
-            }
-        })
-  </script>
-
-
-
+<h1><span style="color: red;">Unfortunatly, due to the request of the devs we will no longer be hosing week 7</span></h1>
 </html>
