--- a/Whitty.html
+++ b/Whitty.html
@@ -169,4 +169,6 @@ body {
         })
   </script>
 
+<h6>if you dont want your game on here please <a href="mailto:contact@thediamondk.com"><span style="color: #00fff2;"><u>contact me (contact@thediamondk.com)</u></span></a>, this is a non-profit website made for my friends and if this gets too popular im taking it down</h6>
+
 </html>
