removed games and added old site

--- a/gmod.html
+++ b/gmod.html
@@ -68,7 +68,7 @@ body {
   <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
   <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
   <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
-  <a href="games.html"><i class="fas fa-gamepad-alt"></i> Games</a>
+  <a href="old/index.html"><i class="fas fa-clock"></i></i> Old Website</a>
 
   <body style="background-color: rgb(0, 71, 73);">
   
