--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
           <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
           <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
           <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
-          <a href="old/index.html"><i class="fas fa-clock"></i></i> Old Website</a>
+          <a href="Old/index.html"><i class="fas fa-clock"></i></i> old Website</a>
             <body style="background-color: rgb(0, 71, 73);">
             
     </div>
