navbar redesign and car drip

--- a/cardrip.html
+++ b/cardrip.html
@@ -3,12 +3,11 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>dog in gmod</title>
-<meta property="og:title" content="geee mod" />
-<meta property="og:image" content="https://thediamondk.github.io/assets/images/gmod.jpg" />
+<title>car drip lol!!!!!111</title>
+<meta property="og:title" content="funni car drip lol!" />
 <head>
   <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" type="image/jpg" href="https://thediamondk.github.io/assets/images/gmod.jpg">
+  <link rel="shortcut icon" type="image/png" href="/assets/images/troll.png">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 </head>
 <body>
@@ -44,17 +43,9 @@
 </nav>
 </div>
 
-
-
-<audio autoplay>
-    <source src="assets/audio/undo.wav" type="audio/wav">
-    Your browser does not support the audio element.
-</audio>
-
-<video width="460" height="460" controls class="center">
-    <source src="assets/videos/gmod.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-
+<div class="cardrip">
+  <a href="https://cdn.discordapp.com/attachments/720369373956669540/836572739053682699/lol.zip" alt="Car Drip"><img src="assets/images/troll.png"  width="240px" height="200px"></a>
+    <h1>Click this image to download all of the car drip memes</h1>
   <body style="background-color: rgb(0, 71, 73);"></body>
+
 </html>
