--- a/index.html
+++ b/index.html
@@ -16,83 +16,33 @@ P to the U double F S YES! -->
     <title>Home</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <head>
+      <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
       <meta property="og:title" content="the most amazing website clikc me if ur cool B)" />
-<!-- Global site tag (gtag.js) - Google Analytics -->
-
-<style>
-
-    
-
-    @import url('https://fonts.googleapis.com/css?family=Quicksand');
-
-    /* padding */
-
-
-
-p, h1, h2, h3, h4, h5, h6, div{
-  padding: 1%;
-  color: #00fff2;
-}
-
-/* makes link text same as normal text */
-
-a {
-    color: #00fff2;
-}
-
-/* navbar */
-
-body {
-  margin: 0;
-  font-family: Quicksand;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: rgb(0, 57, 59);
-}
-
-.topnav a {
-  float: left;
-  color: #00fff2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: rgb(0, 71, 73);
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #00fff2;
-  color: rgb(0, 71, 73);
-}
-
-</style>
-    </head>
-    <body>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DGG831PPRZ');
-</script>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-        <div class="topnav">
-          <a href="index.html#top" class="active"><i class="fas fa-home"></i> Home</a>
-          <a href="dogs-and-stuff.html"><i class="fas fa-dog"></i> Dogs and stuff</a>
-          <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
-          <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
-            <body style="background-color: rgb(0, 71, 73);">
-            
+      </head>
+      <div class="page-header">  
+        </a>
+        <nav>
+          <ul>
+            <li>
+              <a href="index.html#top" class="active"><i class="fas fa-home"></i> Home</a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
+            </li>
+            <li>
+              <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
+            </li>
+            <li>
+              <a href="https://twitter.com/Th3DiamondK"><i class="fab fa-twitter"></i> Twitter</a>
+            </li>
+            <li>
+              <a href="cardrip.html"><i class="fas fa-car"></i> Car Drip Memes</a>
+            </li>
+          </ul>
+        </nav>
     </div>
+            <body style="background-color: rgb(0, 71, 73);">
 
     <h1>Home</h1>
 
