--- a/discord.html
+++ b/discord.html
@@ -44,17 +44,20 @@
 </nav>
 </div>
 
+<div class="discordparent">
 
+  <div class="tdkdiscordserver">
+    <iframe src="https://discord.com/widget?id=764478212372824084&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+  </div>
 
-<audio autoplay>
-    <source src="assets/audio/undo.wav" type="audio/wav">
-    Your browser does not support the audio element.
-</audio>
+  <div class="join">
+    <h1>join these</h1>
+  </div>
 
-<video width="460" height="460" controls class="center">
-    <source src="assets/videos/gmod.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <div class="pikmindiscordserver">
+      <iframe src="https://discord.com/widget?id=839898290048466964&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+  </div>
 
+</div>
   <body style="background-color: rgb(0, 71, 73);"></body>
 </html>
