Revert "discord page"
This reverts commit ab678d4bd7d9d98608f1586dd2f39ca7bc2983a9.

--- a/gmod.html
+++ b/gmod.html
@@ -29,16 +29,16 @@
       <a href="index.html#top" class="active"><i class="fas fa-home"></i> Home</a>
     </li>
     <li>
-      <a href="discord.html"><i class="fab fa-discord"></i> Discord</a>
+      <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
     </li>
     <li>
-      <a href="cardrip.html"><i class="fas fa-car"></i> Car Drip Memes</a>
+      <a href="https://discord.gg/BAAy4Yh"><i class="fab fa-discord"></i> Discord</a>
     </li>
     <li>
       <a href="https://twitter.com/Th3DiamondK"><i class="fab fa-twitter"></i> Twitter</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/thediamondk"><i class="fab fa-youtube"></i> Youtube</a>
+      <a href="cardrip.html"><i class="fas fa-car"></i> Car Drip Memes</a>
     </li>
   </ul>
 </nav>
