--- a/bot.html
+++ b/bot.html
@@ -4,13 +4,17 @@
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>dog in gmod</title>
-<meta property="og:title" content="geee mod" />
-<meta property="og:image" content="https://thediamondk.github.io/assets/images/gmod.jpg" />
+<meta property="og:title" content="Img.Share" />
 <head>
   <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" type="image/jpg" href="https://thediamondk.github.io/assets/images/gmod.jpg">
+  <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.jpg">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 </head>
+<style>
+  h1, h2, h3, h5 {
+    text-align: center;
+  }
+</style>
 <body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
@@ -39,16 +43,17 @@
 </div>
 
 
+<h1>Img.Share is a media sharing bot where you can post and get random images!</h1>
+<h2>Commands (may be outdated)</h2>
 
-<audio autoplay>
-    <source src="assets/audio/undo.wav" type="audio/wav">
-    Your browser does not support the audio element.
-</audio>
+<h3>ping:        Pings the bot</h3>
+<h3>postmeme:    Posts A Meme to the Meme folder</h3>
+<h3>postmiiqr:   Posts Mii Qr codes to the QR folder</h3>
+<h3>randommeme:  Gets a random Meme</h3>
+<h3>randommiiqr: Gets a random Mii QR code</h3>
 
-<video width="460" height="460" controls class="center">
-    <source src="assets/videos/gmod.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+<a href="https://discord.com/api/oauth2/authorize?client_id=848008372913176616&permissions=1024&scope=bot%20applications.commands"><h1>Click me to add the bot</h1></a>
 
+<h5>this bot is still in beta so things will change</h5>
   <body style="background-color: rgb(0, 71, 73);"></body>
 </html>
