--- a/bot.html
+++ b/bot.html
@@ -3,7 +3,7 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>dog in gmod</title>
+<title>Img.Share</title>
 <meta property="og:title" content="Img.Share" />
 <head>
   <link rel="stylesheet" href="styles.css">
