--- a/bot.html
+++ b/bot.html
@@ -48,8 +48,11 @@
 
 <h3>ping:        Pings the bot</h3>
 <h3>postmeme:    Posts A Meme to the Meme folder</h3>
+<h3>postmemevideo:    Posts A Meme Video to the Meme folder</h3>
+<h3>postpet:    Posts A Pet to the Pet folder</h3>
 <h3>postmiiqr:   Posts Mii Qr codes to the QR folder</h3>
 <h3>randommeme:  Gets a random Meme</h3>
+<h3>randompet:  Gets a random Meme</h3>
 <h3>randommiiqr: Gets a random Mii QR code</h3>
 
 <a href="https://discord.com/api/oauth2/authorize?client_id=848008372913176616&permissions=1024&scope=bot%20applications.commands"><h1>Click me to add the bot</h1></a>
