--- a/bot.html
+++ b/bot.html
@@ -14,6 +14,10 @@
   h1, h2, h3, h5 {
     text-align: center;
   }
+  iframe {
+    display: block;
+    margin: 0 auto;
+}
 </style>
 <body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -53,6 +57,8 @@
 <h3>randommiiqr: Gets a random Mii QR code</h3>
 
 <a href="https://discord.com/api/oauth2/authorize?client_id=848008372913176616&permissions=1024&scope=bot%20applications.commands"><h1>Click me to add the bot</h1></a>
+
+<iframe src="https://discord.com/widget?id=849072022557818891&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
 <h5>this bot is still in beta so things will change</h5>
   <body style="background-color: rgb(0, 71, 73);"></body>
