--- a/bot.html
+++ b/bot.html
@@ -58,6 +58,12 @@
 <h3>randommeme:  Gets a random Meme</h3>
 <h3>randompet:  Gets a random Meme</h3>
 <h3>randommiiqr: Gets a random Mii QR code</h3>
+  
+ <h3>Guidelines:</h3> 
+ <h2>No NSFW</h2>
+ <h2>No Deepfakes (looking at you oscie)</h2>
+ <h2>No Racisim</h2>
+ <h2>If you wouldnt show your friends/family it, dont post it (eg: dont post anything offensive)</h2>
 
 <a href="https://discord.com/api/oauth2/authorize?client_id=848008372913176616&permissions=1024&scope=bot%20applications.commands"><h1>Click me to add the bot</h1></a>
 
