--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ P to the U double F S YES! -->
     <title>Home</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <head>
+       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
       <meta property="og:title" content="the most amazing website clikc me if ur cool B)" />
