--- a/bot.html
+++ b/bot.html
@@ -51,13 +51,13 @@
 <h2>Commands (may be outdated)</h2>
 
 <h3>ping:        Pings the bot</h3>
+<h3>invite:        Invites the bot</h3>
+<h3>discord:        Sends the discord invite link</h3>
 <h3>postmeme:    Posts A Meme to the Meme folder</h3>
 <h3>postmemevideo:    Posts A Meme Video to the Meme folder</h3>
 <h3>postpet:    Posts A Pet to the Pet folder</h3>
-<h3>postmiiqr:   Posts Mii Qr codes to the QR folder</h3>
 <h3>randommeme:  Gets a random Meme</h3>
 <h3>randompet:  Gets a random Meme</h3>
-<h3>randommiiqr: Gets a random Mii QR code</h3>
   
  <h1>Guidelines:</h1> 
  <h2>No NSFW</h2>
