--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ P to the U double F S YES! -->
     </div>
             <body style="background-color: rgb(0, 71, 73);">
 
+    <div class=title>
     <h1>Home</h1>
+  </div>
 
-    <p>i use this site to do random stuff and host files that i need so dont expect much lol</p>
+  <h2>yeah i dunno what to put here</h2>
 
     <br>
     <br>
-
-    <div class="mapouter"><div class="gmap_canvas"><iframe width="350" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=dababe%20nigeria&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://youtube-embed-code.com"></a><br><style>.mapouter{position:relative;text-align:right;height:350px;width:350px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:350px;width:350px;}</style></div></div>
 
     <h6>source code, you want it? its yours my friend. aslong as you follow <a href=https://github.com/TheDiamondK/thediamondk.github.io>this link</a></h6>
 
