--- a/gmod.html
+++ b/gmod.html
@@ -34,6 +34,9 @@
     <li>
       <a href="bot.html"><i class="fas fa-robot"></i> Img.Share</a>
     </li>
+    <li>
+      <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
+    </li>
   </ul>
 </nav>
 </div>
