--- a/skins.html
+++ b/skins.html
@@ -3,8 +3,8 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>car drip lol!!!!!111</title>
-<meta property="og:title" content="funni car drip lol!" />
+<title>skinz</title>
+<meta property="og:title" content="skinz" />
 <head>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" type="image/png" href="/assets/images/troll.png">
@@ -32,17 +32,17 @@
     </li>
     <li>
       <a href="bot.html"><i class="fas fa-robot"></i> Img.Share</a>
-    </li>
-    <li>
-      <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
+      <li>
+        <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
+      </li>
     </li>
   </ul>
 </nav>
 </div>
 
 <div class="cardrip">
-  <a href="https://cdn.discordapp.com/attachments/720369373956669540/836572739053682699/lol.zip" alt="Car Drip"><img src="assets/images/troll.png"  width="240px" height="200px"></a>
-    <h1>Click this image to download all of the car drip memes</h1>
+  <a href="https://cdn.discordapp.com/attachments/735354860962185239/852211253895233576/Casual-Skins.mcpack" alt="Skins"><img src="assets/images/troll.png"  width="240px" height="200px"></a>
+    <h1>Click this image to download skins for Minecraft Bedrock/Education Edition</h1>
   <body style="background-color: rgb(0, 71, 73);"></body>
 
 </html>
