--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ P to the U double F S YES! -->
             <li>
               <a href="bot.html"><i class="fas fa-robot"></i> Img.Share</a>
             </li>
+            <li>
+              <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
+            </li>
           </ul>
         </nav>
     </div>
