added a bunch of stuff

--- a/cardrip.html
+++ b/cardrip.html
@@ -36,6 +36,12 @@
     <li>
       <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
     </li>
+    <li>
+      <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
+    </li>
+    <li>
+      <a href="thediamondk.blogspot.com"><i class="fab fa-blogger-b"></i> Blog</a>
+    </li>
   </ul>
 </nav>
 </div>
@@ -44,5 +50,5 @@
   <a href="https://cdn.discordapp.com/attachments/720369373956669540/836572739053682699/lol.zip" alt="Car Drip"><img src="assets/images/troll.png"  width="240px" height="200px"></a>
     <h1>Click this image to download all of the car drip memes</h1>
   <body style="background-color: rgb(0, 71, 73);"></body>
-
+</div>
 </html>
