--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@ P to the U double F S YES! -->
             <li>
               <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
             </li>
+            <li>
+              <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
+            </li>
+            <li>
+              <a href="thediamondk.blogspot.com"><i class="fab fa-blogger-b"></i> Blog</a>
+            </li>
           </ul>
         </nav>
     </div>
@@ -47,6 +53,12 @@ P to the U double F S YES! -->
   </div>
 
   <h2>yeah i dunno what to put here</h2>
+
+  <h2>Riitag:</h2>
+
+  <div class="riitag">
+    <a href="https://tag.rc24.xyz/302271402277339146/tag.max.png?randomizer=0.jZrCbp" alt="Riitag"><img src="https://tag.rc24.xyz/302271402277339146/tag.max.png?randomizer=0.jZrCbp"  width="1050px" height="400px"></a>
+  </div>
 
     <br>
     <br>
