--- a/bot.html
+++ b/bot.html
@@ -7,7 +7,7 @@
 <meta property="og:title" content="Img.Share" />
 <head>
   <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.jpg">
+  <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 </head>
 <style>
@@ -44,6 +44,12 @@
     </li>
     <li>
       <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
+    </li>
+    <li>
+      <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
+    </li>
+    <li>
+      <a href="thediamondk.blogspot.com"><i class="fab fa-blogger-b"></i> Blog</a>
     </li>
   </ul>
 </nav>
