--- a/gmod.html
+++ b/gmod.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>dog in gmod</title>
 <meta property="og:title" content="geee mod" />
-<meta property="og:image" content="https://thediamondk.github.io/assets/images/gmod.jpg" />
+<meta property="og:image" content="https://thediamondk.com/assets/images/gmod.jpg" />
 <head>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" type="image/jpg" href="https://thediamondk.github.io/assets/images/gmod.jpg">
@@ -36,6 +36,12 @@
     </li>
     <li>
       <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
+    </li>
+    <li>
+      <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
+    </li>
+    <li>
+      <a href="thediamondk.blogspot.com"><i class="fab fa-blogger-b"></i> Blog</a>
     </li>
   </ul>
 </nav>
