--- a/skins.html
+++ b/skins.html
@@ -36,6 +36,12 @@
         <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
       </li>
     </li>
+    <li>
+      <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
+    </li>
+    <li>
+      <a href="thediamondk.blogspot.com"><i class="fab fa-blogger-b"></i> Blog</a>
+    </li>
   </ul>
 </nav>
 </div>
