fixed blog link

--- a/bot.html
+++ b/bot.html
@@ -49,7 +49,7 @@
       <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
     </li>
     <li>
-      <a href="thediamondk.blogspot.com"><i class="fab fa-blogger-b"></i> Blog</a>
+      <a href="https://thediamondk.blogspot.com"><i class="fab fa-blogger-b"></i> Blog</a>
     </li>
   </ul>
 </nav>
