--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ P to the U double F S YES! -->
               <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
             </li>
             <li>
-              <a href="thediamondk.blogspot.com"><i class="fab fa-blogger-b"></i> Blog</a>
+              <a href="https://thediamondk.blogspot.com"><i class="fab fa-blogger-b"></i> Blog</a>
             </li>
           </ul>
         </nav>
