--- a/socials.html
+++ b/socials.html
@@ -4,7 +4,7 @@
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>social stuff</title>
-<meta property="og:title" content="social stuff" />
+<meta property="og:title" content="Socials" />
 <head>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
@@ -20,29 +20,10 @@
 
   gtag('config', 'G-DGG831PPRZ');
 </script>
-<div class="page-header">  
-</a>
-<nav>
-  <ul>
-    <li>
-      <a href="index.html#top" class="active"><i class="fas fa-home"></i> Home</a>
-    </li>
-    <li>
-      <a href="cardrip.html"><i class="fas fa-car"></i> Car Drip Memes</a>
-    </li>
-    <li>
-      <a href="bot.html"><i class="fas fa-robot"></i> Img.Share</a>
-    </li>
-    <li>
-      <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
-    </li>
-    <li>
-      <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
-    </li>
-  </ul>
-</nav>
-</div>
-
+<div class="back">
+  <a href="index.html"><i class="far fa-arrow-left"></i><b> Home</b></a>
+  </div>
+  <br>
 <h1>Discord:</h1>
   <h3>TDK Discord</h3>
   <div class=discord>
@@ -52,7 +33,7 @@
   <div class=discord>
   <iframe src="https://discord.com/widget?id=839898290048466964&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </div>
-  <h3>Img.Share Discord</h3>
+  <h3>TDK's Raspberry Pi</h3>
   <div class=discord>
   <iframe src="https://discord.com/widget?id=849072022557818891&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </div>
