--- a/bot.html
+++ b/bot.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 
-<html prefix="og: https://ogp.me/ns#">
-<meta charset="utf=8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Img.Share</title>
-<meta property="og:title" content="Img.Share" />
+<title>TDK | Img.Share</title>
+<link rel="shortcut icon" type="image/png" href="assets/images/Img.Share.png">
 <head>
+  <html prefix="og: https://ogp.me/ns#">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" type="image/png" href="https://thediamondk.github.io/assets/images/favicon.png">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
-</head>
-<style>
-  h1, h2, h3, h5 {
-    text-align: center;
-  }
-  iframe {
-    display: block;
-    margin: 0 auto;
+  <meta property="og:title" content="Img.Share" />
+  <meta property="og:image" content="https://www.thediamondk.com/assets/images/Img.Share.png" />
+  <style>
+        body {
+  background-color: #043141; /* For browsers that do not support gradients */
+  background-image: linear-gradient(#10726b, #043141);
 }
-</style>
+  </style>
 <body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
@@ -29,32 +25,14 @@
 
   gtag('config', 'G-DGG831PPRZ');
 </script>
-<div class="page-header">  
-</a>
-<nav>
-  <ul>
-    <li>
-      <a href="index.html#top" class="active"><i class="fas fa-home"></i> Home</a>
-    </li>
-    <li>
-      <a href="cardrip.html"><i class="fas fa-car"></i> Car Drip Memes</a>
-    </li>
-    <li>
-      <a href="bot.html"><i class="fas fa-robot"></i> Img.Share</a>
-    </li>
-    <li>
-      <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
-    </li>
-    <li>
-      <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
-    </li>
-  </ul>
-</nav>
+<div class="back">
+<a href="index.html"><i class="far fa-arrow-left"></i><b> Home</b></a>
 </div>
-
-
+<img src="assets/images/Img.Share.png" width="100px" height="100px" class="logo">
+<br>
 <h1>Img.Share is a media sharing bot where you can post and get random images!</h1>
-<h2>Commands (may be outdated)</h2>
+<br>
+<h1>Commands: (may be outdated)</h1>
 
 <h3>ping:        Pings the bot</h3>
 <h3>invite:        Invites the bot</h3>
@@ -64,17 +42,17 @@
 <h3>postpet:    Posts A Pet to the Pet folder</h3>
 <h3>randommeme:  Gets a random Meme</h3>
 <h3>randompet:  Gets a random Meme</h3>
-  
+  <br>
  <h1>Guidelines:</h1> 
  <h2>No NSFW</h2>
  <h2>No Deepfakes (looking at you oscie)</h2>
  <h2>No Racisim</h2>
  <h2>If you wouldnt show your friends/family it, dont post it (eg: dont post anything offensive)</h2>
-
+<br>
 <a href="https://discord.com/api/oauth2/authorize?client_id=848008372913176616&permissions=1024&scope=bot%20applications.commands"><h1>Click me to add the bot</h1></a>
 
 <iframe src="https://discord.com/widget?id=849072022557818891&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
-<h5>this bot is still in beta so things will change</h5>
-  <body style="background-color: rgb(0, 71, 73);"></body>
+<h5>note: this bot is still in development so things will change</h5>
+</body>
 </html>
