--- a/index.html
+++ b/index.html
@@ -1,81 +1,28 @@
 <!DOCTYPE html>
-
-<!-- What's that pair that packs that punch?
-The unique taste so creamy with a crunch
-P B and C is what I'm thinking of!
-And it only can be found in my reeses p.
-Peanut butter chocolate
-Great when seperate
-But when they combine
-They make the morning time epic!
-R double E S E S YES!
-...
-P to the U double F S YES! -->
-
 <html>
-    <title>Home</title>
+    <title>TDK | Home</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <head>
+      <html prefix="og: https://ogp.me/ns#">
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
-      <meta property="og:title" content="the most amazing website clikc me if ur cool B)" />
+      <meta property="og:title" content="TDK" />
+      <meta property="og:image" content="https://www.thediamondk.com/assets/images/favicon.png" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-DGG831PPRZ');
+        </script>
       </head>
-      <div class="page-header">  
-        </a>
-        <nav>
-          <ul>
-            <li>
-              <a href="index.html#top" class="active"><i class="fas fa-home"></i> Home</a>
-            </li>
-            <li>
-              <a href="cardrip.html"><i class="fas fa-car"></i> Car Drip Memes</a>
-            </li>
-            <li>
-              <a href="bot.html"><i class="fas fa-robot"></i> Img.Share</a>
-            </li>
-            <li>
-              <a href="skins.html"><i class="far fa-cube"></i> Skins for MC:B/EDU</a>
-            </li>
-            <li>
-              <a href="socials.html"><i class="fas fa-share"></i> Socials</a>
-            </li>
-          </ul>
-        </nav>
-    </div>
-            <body style="background-color: rgb(0, 71, 73);">
-
-    <div class=title>
-    <h1>Home</h1>
-  </div>
-
-  <h2>yeah i dunno what to put here</h2>
-
-  <h2>Riitag:</h2>
-
-  <div class="riitag">
-    <a href="https://tag.rc24.xyz/302271402277339146/tag.max.png?randomizer=0.jZrCbp" alt="Riitag"><img src="https://tag.rc24.xyz/302271402277339146/tag.max.png?randomizer=0.jZrCbp"  width="1050px" height="400px"></a>
-  </div>
-
-    <br>
-    <br>
-
-    <h6>source code, you want it? its yours my friend. aslong as you follow <a href=https://github.com/TheDiamondK/thediamondk.github.io>this link</a></h6>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <a href="gmod.html"> <img src="assets/images/gmod.jpg" style="width:50px;height:50px;"></a>
-
-    </body>
-</html>
+      <body>
+        <img src="assets/images/favicon.png" width="300px" height="300px" class="logo">
+      </body>
+      <div class="links">
+      <a href="bot.html" class="links">Img.Share  </a> |  <a href="socials.html" class="links">Socials</a> 
+      </div>
+      
