--- a/index.html
+++ b/index.html
@@ -25,4 +25,21 @@
       <div class="links">
       <a href="bot.html" class="links">Img.Share  </a> |  <a href="socials.html" class="links">Socials</a> 
       </div>
+      <br>
+      <br>
+      <div id="splash" class="randomtext">
+        aaa
+    </div>
+
+    <script>
+      //splash text
+      document.getElementById('splash').innerText = 
+      [
+          "amogus",
+          "ඞ",
+          "sylveon is my favorite pokemon",
+          "the legs on the bus go step step step",
+          "fun fact: 🔰 must be displayed by drivers in Japan for one year after they receive their drivers licence. Similar to L-Plates used to identify learner drivers in other countries. (yeah i just stole this from emojipedia)"
+      ][Math.floor(Math.random()*5)]
+  </script>
       
