--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="assets/images/favicon.png" width="300px" height="300px" class="logo">
       </body>
       <div class="links">
-      <a href="bot.html" class="links">Img.Share  </a> |  <a href="socials.html" class="links">Socials</a> 
+      <a href="bot.html" class="links"><i class="far fa-image"></i> Img.Share  </a> |  <a href="socials.html" class="links"><i class="far fa-share-alt"></i> Socials  </a>  |  <a href="goodies.html" class="links"><i class="fas fa-gift"></i> Goodies  </a>
       </div>
       <br>
       <br>
