added loading screen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="assets/images/favicon.png" width="300px" height="300px" class="logo">
       </body>
       <div class="links">
-      <a href="bot.html" class="links"><i class="far fa-image"></i> Img.Share  </a> |  <a href="socials.html" class="links"><i class="far fa-share-alt"></i> Socials  </a>  |  <a href="goodies.html" class="links"><i class="fas fa-gift"></i> Goodies  </a>
+      <a href="bot.html" class="links"><i class="far fa-image"></i> Img.Share  </a> |  <a href="socials.html" class="links"><i class="far fa-share-alt"></i> Socials  </a>  |  <a href="loading.html" class="links"><i class="fas fa-gift"></i> Goodies  </a>
       </div>
       <br>
       <br>
@@ -39,7 +39,12 @@
           "ඞ",
           "sylveon is my favorite pokemon",
           "the legs on the bus go step step step",
-          "fun fact: 🔰 must be displayed by drivers in Japan for one year after they receive their drivers licence. Similar to L-Plates used to identify learner drivers in other countries. (yeah i just stole this from emojipedia)"
-      ][Math.floor(Math.random()*5)]
+          "fun fact: 🔰 must be displayed by drivers in Japan for one year after they receive their drivers licence. Similar to L-Plates used to identify learner drivers in other countries. (yeah i just stole this from emojipedia)",
+          "if you want to see some fresh spahgetti, look at the source code of the goodies page",
+          "Owns Garfield Kart and Garfield Kart - Furious Racing"
+      ][Math.floor(Math.random()*7)]
   </script>
       
+      <div style="font-size:48px;text-align:center;">
+				<a href="https://twitter.com/Th3DiamondK"><i class="fab fa-twitter"></i></a> <a href="https://youtube.com/thediamondk"><i class="fab fa-youtube"></i></a> <a href="https://github.com/thediamondk"><i class="fab fa-github"></i></a>
+			</div><br><br>
