--- a/goodies.html
+++ b/goodies.html
@@ -53,5 +53,9 @@
   <img src="/assets/images/wii button.png">
   <div class="centered"><a href="#" onclick="randomSite();" class="button">Random Site</a></div>
 </div>
+<div class="button">
+  <img src="/assets/images/wii button.png">
+  <div class="centered"><img src="assets/images/NEW_en.gif"> <a href="https://cdn.discordapp.com/attachments/804545686707503134/863265036674924584/images.zip" class="button" style="font-size: 80%;">WSC Assets (thanks snoot!)</a></div>
+</div>
 <div class="dot" id="line01">･･･････････････････････････････････････････････････････････････････････････</div>
 </body>
