added wii cursor

--- a/goodies.html
+++ b/goodies.html
@@ -11,10 +11,12 @@
       <style>
         body {
           background-image: url("assets/images/WSC.png");
+          cursor:url("assets/images/wii.cur"), default;
         }
         a {
           font-family: "Wii";
           color: #8C8C8C;
+          cursor:url("assets/images/wii-hover.cur"), default;
         }
         a:hover {
           color: rgb(56, 56, 56);
