--- a/loading.html
+++ b/loading.html
@@ -9,12 +9,14 @@
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
       <meta property="og:title" content="Goodies" />
       <style>
-        body {
-          background-color: white;
+               body {
+          background-image: url("assets/images/WSC.png");
+          cursor:url("assets/images/wii.cur"), default;
         }
         a {
           font-family: "Wii";
           color: #8C8C8C;
+          cursor:url("assets/images/wii-hover.cur"), default;
         }
         a:hover {
           color: rgb(56, 56, 56);
