made loading.html white (racisim :trollface: )

--- a/loading.html
+++ b/loading.html
@@ -10,7 +10,7 @@
       <meta property="og:title" content="Goodies" />
       <style>
                body {
-          background-image: url("assets/images/WSC.png");
+          background-color: white;
           cursor:url("assets/images/wii.cur"), default;
         }
         a {
