added img.share archive

--- a/goodies.html
+++ b/goodies.html
@@ -57,7 +57,11 @@
 </div>
 <div class="button">
   <img src="/assets/images/wii button.png">
-  <div class="centered"><img src="assets/images/NEW_en.gif"> <a href="https://cdn.discordapp.com/attachments/804545686707503134/863265036674924584/images.zip" class="button" style="font-size: 80%;">WSC Assets (thanks snoot!)</a></div>
+  <div class="centered"><a href="https://cdn.discordapp.com/attachments/804545686707503134/863265036674924584/images.zip" class="button" style="font-size: 90%;">WSC Assets (thanks snoot!)</a></div>
+</div>
+<div class="button">
+  <img src="/assets/images/wii button.png">
+  <div class="centered"><img src="assets/images/NEW_en.gif"> <a href="archive.html" class="button">Img.Share Archive</a></div>
 </div>
 <div class="dot" id="line01">･･･････････････････････････････････････････････････････････････････････････</div>
 </body>
