--- a/socials.html
+++ b/socials.html
@@ -3,7 +3,7 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf=8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>social stuff</title>
+<title>TDK | Socials</title>
 <meta property="og:title" content="Socials" />
 <head>
   <link rel="stylesheet" href="styles.css">
