put archive in goodies folder

--- a/goodies/archive.html
+++ b/goodies/archive.html
@@ -6,8 +6,8 @@
 <title>TDK | Img.Share Archive</title>
 <meta property="og:title" content="Img.Share Archive" />
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" type="image/png" href="assets/images/Img.Share.png">
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/Img.Share.png">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 </head>
 <style>
@@ -32,7 +32,7 @@ a:hover {
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
 <div class="back">
-  <a href="index.html"><i class="far fa-arrow-left" style="color: rgb(90, 0, 143);"></i><b style="color: rgb(90, 0, 143);"> Home</b></a>
+  <a href="../goodies.html"><i class="far fa-arrow-left" style="color: rgb(90, 0, 143);"></i><b style="color: rgb(90, 0, 143);"> Goodies</b></a>
   </div>
   <br>
 
