--- a/goodies.html
+++ b/goodies.html
@@ -61,7 +61,7 @@
 </div>
 <div class="button">
   <img src="/assets/images/wii button.png">
-  <div class="centered"><img src="assets/images/NEW_en.gif"> <a href="archive.html" class="button">Img.Share Archive</a></div>
+  <div class="centered"><img src="assets/images/NEW_en.gif"> <a href="goodies/archive.html" class="button">Img.Share Archive</a></div>
 </div>
 <div class="dot" id="line01">･･･････････････････････････････････････････････････････････････････････････</div>
 </body>
