added riitag and digicard

--- a/goodies.html
+++ b/goodies.html
@@ -61,7 +61,15 @@
 </div>
 <div class="button">
   <img src="/assets/images/wii button.png">
-  <div class="centered"><img src="assets/images/NEW_en.gif"> <a href="goodies/archive.html" class="button">Img.Share Archive</a></div>
+  <div class="centered"> <a href="goodies/archive.html" class="button">Img.Share Archive</a></div>
+</div>
+<div class="button">
+  <img src="/assets/images/wii button.png">
+  <div class="centered"><img src="assets/images/NEW_en.gif"> <a class="button" href="https://tag.rc24.xyz/302271402277339146/tag.max.png?randomizer=0.XOziWv" target="_blank" rel="noreferrer noopener">Riitag</a></div>
+</div>
+<div class="button">
+  <img src="/assets/images/wii button.png">
+  <div class="centered"><img src="assets/images/NEW_en.gif"> <a class="button" href="https://card.wiilink24.com/cards/302271402277339146.jpg?randomizer=0.eEKCZd" target="_blank" rel="noreferrer noopener">Digicard</a></div>
 </div>
 <div class="dot" id="line01">･･･････････････････････････････････････････････････････････････････････････</div>
 </body>
