--- a/goodies/archive.html
+++ b/goodies/archive.html
@@ -6,6 +6,7 @@
 <title>TDK | Img.Share Archive</title>
 <meta property="og:title" content="Img.Share Archive" />
 <head>
+  <meta name="theme-color" content="#2e1c63">
   <link rel="stylesheet" href="../styles.css">
   <link rel="shortcut icon" type="image/png" href="../assets/images/Img.Share.png">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
