--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 <meta property="og:title" content="404" />
+<meta name="theme-color" content="#00807d">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
