--- a/bot.html
+++ b/bot.html
@@ -3,6 +3,7 @@
 <title>TDK | Img.Share</title>
 <link rel="shortcut icon" type="image/png" href="assets/images/Img.Share.png">
 <head>
+  <meta name="theme-color" content="#043141">
   <html prefix="og: https://ogp.me/ns#">
    <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
