--- a/loading.html
+++ b/loading.html
@@ -4,6 +4,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <head>
       <html prefix="og: https://ogp.me/ns#">
+      <meta name="theme-color" content="#b8f2ed">
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
