--- a/socials.html
+++ b/socials.html
@@ -6,6 +6,7 @@
 <title>TDK | Socials</title>
 <meta property="og:title" content="Socials" />
 <head>
+  <meta name="theme-color" content="#00807d">
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
