--- a/goodies.html
+++ b/goodies.html
@@ -3,6 +3,7 @@
     <title>TDK | Goodies</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <head>
+      <meta charset="utf-8">
       <html prefix="og: https://ogp.me/ns#">
       <meta name="theme-color" content="#b8f2ed">
        <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,9 +44,10 @@
   <script>
     var sites = [
         'https://www.wicy.cool',
-        'https://www.wiilink24.com',
         'https://bananaplays.com/',
-        'https://oscie.net'
+        'https://oscie.net',
+        'https://soafen.love',
+        'https://amongusinreal.life'
     ];
 
     function randomSite() {
@@ -67,11 +69,7 @@
 </div>
 <div class="button">
   <img src="/assets/images/wii button.png">
-  <div class="centered"><img src="assets/images/NEW_en.gif"> <a class="button" href="https://tag.rc24.xyz/302271402277339146/tag.max.png?randomizer=0.XOziWv" target="_blank" rel="noreferrer noopener">Riitag</a></div>
-</div>
-<div class="button">
-  <img src="/assets/images/wii button.png">
-  <div class="centered"><img src="assets/images/NEW_en.gif"> <a class="button" href="https://card.wiilink24.com/cards/302271402277339146.jpg?randomizer=0.eEKCZd" target="_blank" rel="noreferrer noopener">Digicard</a></div>
+  <div class="centered"> <a class="button" href="https://tag.rc24.xyz/302271402277339146/tag.max.png?randomizer=0.XOziWv" target="_blank" rel="noreferrer noopener">Riitag</a></div>
 </div>
 <div class="dot" id="line01">･･･････････････････････････････････････････････････････････････････････････</div>
 </body>
