--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
     <title>TDK | Home</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
-    <head>
+    
+      <meta charset="utf-8">
       <meta name="theme-color" content="#00807d">
       <html prefix="og: https://ogp.me/ns#">
        <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,12 +40,11 @@
       [
           "amogus",
           "ඞ",
-          "sylveon is my favorite pokemon",
           "the legs on the bus go step step step",
           "fun fact: 🔰 must be displayed by drivers in Japan for one year after they receive their drivers licence. Similar to L-Plates used to identify learner drivers in other countries. (yeah i just stole this from emojipedia)",
           "if you want to see some fresh spahgetti, look at the source code of the goodies page",
           "Owns Garfield Kart and Garfield Kart - Furious Racing"
-      ][Math.floor(Math.random()*7)]
+      ][Math.floor(Math.random()*6)]
   </script>
       
       <div style="font-size:48px;text-align:center;">
