--- a/socials.html
+++ b/socials.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html prefix="og: https://ogp.me/ns#">
-<meta charset="utf=8">
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>TDK | Socials</title>
 <meta property="og:title" content="Socials" />
