--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html prefix="og: https://ogp.me/ns#">
-<meta charset="utf=8">
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>TDK | 404</title>
 <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
