<meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">      <meta charset="utf-8">

--- a/loading.html
+++ b/loading.html
@@ -3,6 +3,7 @@
     <title>TDK | Goodies</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
     <head>
+      <meta charset="utf-8">
       <html prefix="og: https://ogp.me/ns#">
       <meta name="theme-color" content="#b8f2ed">
        <meta name="viewport" content="width=device-width, initial-scale=1">
