--- a/socials.html
+++ b/socials.html
@@ -39,9 +39,9 @@
   <iframe src="https://discord.com/widget?id=849072022557818891&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </div>
   <h3>Twitter:</h3>
-  <a class="twitter-timeline" data-width="500" data-height="500" data-theme="dark" href="https://twitter.com/Th3DiamondK?ref_src=twsrc%5Etfw">Tweets by Th3DiamondK</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-width="500" data-height="500" data-theme="dark" href="https://twitter.com/FoxgirlSylvie?ref_src=twsrc%5Etfw">Tweets by FoxgirlSylvie</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-  <a href="https://twitter.com/Th3diamondk?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @Th3diamondk</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a href="https://twitter.com/FoxgirlSylvie?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @FoxgirlSylvie</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
   <body style="background-color: rgb(0, 71, 73);"></body>
 </html>
