me when your mother

--- a/index.html
+++ b/index.html
@@ -48,5 +48,5 @@
   </script>
       
       <div style="font-size:48px;text-align:center;">
-				<a href="https://twitter.com/Th3DiamondK"><i class="fab fa-twitter"></i></a> <a href="https://youtube.com/thediamondk"><i class="fab fa-youtube"></i></a> <a href="https://github.com/thediamondk"><i class="fab fa-github"></i></a>
+				<a href="https://twitter.com/FoxgirlSylvie"><i class="fab fa-twitter"></i></a> <a href="https://youtube.com/thediamondk"><i class="fab fa-youtube"></i></a> <a href="https://github.com/thediamondk"><i class="fab fa-github"></i></a>
 			</div><br><br>
