--- a/goodies.html
+++ b/goodies.html
@@ -72,4 +72,5 @@
   <div class="centered"> <a class="button" href="https://tag.rc24.xyz/302271402277339146/tag.max.png?randomizer=0.XOziWv" target="_blank" rel="noreferrer noopener">Riitag</a></div>
 </div>
 <div class="dot" id="line01">･･･････････････････････････････････････････････････････････････････････････</div>
+<script src="assets/js/konami.js"></script>
 </body>
